# XClaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agentloopImprove.md  chatgpt_oauth_plan.md  daily_report_support_plan.md  datasource.md  docker-compose.yml  improve.md  inspection.md  pyproject.toml  qqbot_support_plan.md  research.md  todolist.md  typeSupportPlan.md  typing.md  xclaw.config.example.yaml
.github/workflows/: uv-ci.yml
docs/: wechat-design.md
scripts/: uv-build.sh
tests/: conftest.py  test_agent_engine.py  test_channels.py  test_config.py  test_db.py  test_doc_skill.py  test_investment_api.py  test_investment_report.py  test_llm.py  test_llm_types.py  test_mcp_server.py  test_memory.py  test_oauth.py  test_phase5.py  test_qqbot.py  test_report_export.py  test_scheduler.py  test_stock_tools.py  test_strategy_scan.py  test_tools.py  test_wechat.py  test_wechat_ilink.py  test_wechat_multitenant.py  test_yaml_skill.py
xclaw/: __init__.py  __main__.py  agent_engine.py  cli.py  config.py  db.py  llm.py  llm_types.py  mcp.py  mcp_server.py  memory.py  runtime.py  scheduler.py
xclaw/channels/: __init__.py  dingtalk.py  feishu.py  qq.py  web.py  wechat.py  wechat_mp.py  wechat_multi_tenant.py  wecom.py
xclaw/datasources/: __init__.py  a_share.py  futures_cn.py
xclaw/investment/: __init__.py  report_export_service.py  report_service.py  strategy_engine.py  strategy_models.py  strategy_rules.py
xclaw/oauth/: __init__.py  openai_codex.py  store.py
xclaw/skills/: __init__.py  doc_skill.py  yaml_skill.py
xclaw/tools/: __init__.py  bash_tool.py  earnings_analysis.py  file_tools.py  (+23 more)
(+2 files in other folders)
