[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xclaw"
version = "0.1.0"
description = "Python-based intelligent Agent runtime for task processing and stock investment assistance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Core async & HTTP
    "httpx>=0.27",
    "anyio>=4.0",
    # Data validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Config
    "PyYAML>=6.0",
    # Web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    # Database
    "aiosqlite>=0.20",
    # Logging
    "loguru>=0.7",
    # CLI
    "click>=8.1",
    # Stock data
    "akshare>=1.14",
    "baostock>=0.8.9",
    "pytdx>=1.72",
    "yfinance>=0.2",
    # Data analysis
    "pandas>=2.2",
    "pandas-ta",
    "matplotlib>=3.10.9",
    # Scheduling
    "APScheduler>=3.10",
    # Web scraping helpers
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "Pillow>=12.2.0",
    "qrcode>=7.4",
    "reportlab>=4.4.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[project.scripts]
xclaw = "xclaw.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xclaw*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
